--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,14 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation 'com.google.code.gson:gson:2.10.1'
+
+    // Text features
+    implementation 'com.google.mlkit:text-recognition:16.0.0'
+    // Image labeling
+    implementation 'com.google.mlkit:image-labeling:17.0.7'
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'androidx.fragment:fragment-ktx:1.6.1'
 }
