--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,10 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.10.1'
 
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
     // Text features
     implementation 'com.google.mlkit:text-recognition:16.0.0'
     // Image labeling
